# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
pre_commit_hooks/: check_docusaurus_frontmatter.py  commit_message_reuse.py  word_veto.py
tests/: commit_msg_reuse_test.py  docusaurus_frontmatter_test.py  word_veto_test.py
tests/resources/: ampersand_doc.md  bad_commit_msg.txt  bad_doc.md  bad_link.md  embeddedhtml.md  good_commit_msg.txt  management.md
